--- a/src/board/board.css
+++ b/src/board/board.css
@@ -2,4 +2,32 @@
     width: 100%;
     height: 100vh;
     background-color: #076d62;
+   
+}
+
+.card-box {
+    width: 800px;
+    height: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    margin-left: -400px;
+    bottom: 5%;
+    border: 1px solid goldenrod;
+
+}
+
+.drop-area {
+    width: 800px;
+    height: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    margin-left: -400px;
+    top: 5%;
+    border: 1px solid goldenrod;
 }
