--- a/src/board/board.css
+++ b/src/board/board.css
@@ -15,8 +15,8 @@
     left: 50%;
     margin-left: -400px;
     bottom: 5%;
-    border: 1px solid goldenrod;
-
+    position: relative;
+    margin-top: 200px;
 }
 
 .drop-area {
@@ -29,5 +29,30 @@
     left: 50%;
     margin-left: -400px;
     top: 5%;
-    border: 1px solid goldenrod;
+    position: relative;
 }
+
+.drop-card {
+    width: 122px;
+    height: 165px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+    border: 1px solid goldenrod;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.heart-icon {
+    font-size: 40px;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -20px;
+    margin-top: -20px;
+    color: rgba(218, 165, 32, 0.6);
+}
+
